update screenshots + fix time color
~ added new screenshots with updated colors

~ fixed time tag coloring (was invisible in dark mode)

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -32,6 +32,10 @@ $separator-decoration: "//////";
   pre code {
     background-color: inherit !important;
   }
+
+  time {
+    color: rgba($base-background, 0.7) !important;
+  }
 }
 
 /**
